--- a/style.css
+++ b/style.css
@@ -10,3 +10,426 @@ License URI: LICENSE
 Text Domain: ab-portfolio
 */
 
+/* --- TABLE DES MATIERES
+01. GENERAL
+02. POLICES 
+03. MENU 
+04. JUMBOTRON
+05. INTRO
+06. SERVICES
+07. RECENT WORK
+08. APROPOS
+09. PORTFOLIO 
+09. CONTACT
+10. FOOTER
+--- */
+
+/*========================== 01. GENERAL ========================== */
+
+body {
+    font-family: "Open-sans-regular";
+    overflow-x: hidden;
+}
+
+/*========================== 02.POLICES ========================== */
+
+h3 {
+    margin-top: 75px;
+    margin-bottom: 35px;
+    font-family: 'Open-sans-bold';
+    font-size: 1.5rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    line-height: 34px;
+}
+
+@media screen and (max-width: 768px) {
+    h3 {
+        font-size: 1.1rem;
+        margin-top: 1.1em;
+        margin-bottom: 1.2em;
+    }
+}
+
+@font-face {
+    font-family: 'Open-sans-regular';
+    src: url(../fonts/OpenSans-Regular.ttf)
+}
+
+@font-face {
+    font-family: 'Open-sans-bold';
+    src: url(../fonts/OpenSans-Bold.ttf)
+}
+
+/*========================== 03.MENU ========================== */
+
+.hero {
+    margin-top: 60px;
+}
+
+.navbar {
+    height: 62px;
+    background: #fff;
+    -webkit-box-shadow: 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
+}
+
+.hero .navbar {
+    background: #fff;
+}
+
+.navbar .logo {
+    height: auto;
+}
+
+
+@media screen and (max-width: 768px) {
+    .navbar .logo {
+        padding-left: 1em;
+    }
+}
+
+a.navbar-item.is-active,
+a.navbar-item:hover,
+a.navbar-link.is-active,
+a.navbar-link:hover {
+    background-color: #1496ED;
+    color: #fff;
+}
+
+.navbar-burger {
+    height: 62px;
+    width: 4rem;
+}
+
+.navbar-burger span:nth-child(1) {
+    top: calc(50% - 10px);
+}
+
+.navbar-burger span:nth-child(3) {
+    top: calc(50% + 8px);
+}
+
+.navbar-burger span {
+    background-color: black;
+    width: 25px;
+    height: 1.45px;
+}
+
+.hero-img {
+    padding-top: 50px;
+    max-height: 3.6rem;
+}
+
+.navbar-item {
+    color: #333333;
+    font-size: 15px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+/*========================== 04.JUMBOTRON ========================== */
+
+/* ---- particles.js container ---- */
+
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #404852;
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+}
+
+.hero {
+    background-color: #404852;
+}
+
+.hero .title {
+    position: relative;
+    color: #fff;
+    letter-spacing: 5px;
+    font-size: 2.4rem;
+    line-height: 1.3;
+    padding-top: 80px;
+    margin-bottom: 25px;
+}
+
+.hero .subtitle {
+    position: relative;
+    color: #fff;
+    font-weight: 300;
+    font-size: 1.5rem;
+    line-height: 35px;
+}
+
+@media screen and (max-width: 768px) {
+    .hero .title {
+        font-size: 1.7rem;
+    }
+    .hero .subtitle {
+        font-size: 1.2rem;
+    }
+    .hero-img {
+       display:none;
+    }
+    .hero .title,
+    .subtitle {
+        text-align: center;
+    }
+    .hero-btn {
+        text-align: center;
+    }
+}
+
+.hero img {
+    position: relative;
+    max-height: 250px;
+    float: right;
+}
+
+.hero .button {
+    margin: 12px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.hero,
+a.button {
+    text-transform: uppercase;
+    font-size: 16px !important;
+}
+
+.hero .button.is-info.is-outlined {
+    background-color: transparent;
+    border-color: #209cee;
+    color: #fff;
+}
+
+/*========================== 05.INTRO ========================== */
+
+.intro p {
+    font-size: 1rem;
+    margin-bottom: 60px;
+}
+.intro h3 {
+    text-align: center;
+}
+@media screen and (max-width: 768px) {
+    .intro p {
+        margin: 10px;
+    }
+}
+
+/*========================== 06.SERVICES ========================== */
+
+.services h4 {
+    color: #0095EB;
+    font-size: 1.6rem;
+    text-align: left;
+}
+
+.services p {
+    font-size: 1.1rem;
+    text-align: left;
+}
+
+@media screen and (max-width: 768px) {
+    .services .col-img {
+        text-align: center;
+    }
+    .services h4 {
+        font-size: 23px;
+        text-align: center;
+    }
+    .services p {
+        text-align: center;
+        font-size: 1rem;
+        padding: 6px;
+    }
+}
+
+/*========================== 07.RECENT WORK ========================== */
+
+.recentwork {
+    margin-bottom: 3em;
+}
+
+.image.is-2by1 {
+    height: 180px;
+    width: 250px;
+    padding-top: 50%;
+}
+
+.recentwork .button {
+    margin-top: 30px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+/*========================== 08.APROPOS ========================== */
+
+.apropos h3 {
+    padding-top: 40px;
+    padding-bottom: 1em;
+    font-size: 1.8rem;
+}
+.apropos h4 {
+    font-family: 'Open-sans-bold';
+    font-size: 1.4rem;
+    text-align: center;
+    font-weight: 600;
+    letter-spacing: 1px;
+    line-height: 34px;
+
+}
+@media screen and (max-width: 768px) {
+    .apropos h3 {
+        padding-top: 80px;
+    }
+}
+
+.bloc_presentation {
+    border-radius: 4px;
+    background-color: #fefefe;
+    border: 1px solid #DBDBDB;
+    box-shadow: rgba(121, 121, 121, .35) 1px 20px 30px;
+}
+@media screen and (max-width: 768px) {
+    .bloc_presentation {
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    }
+}
+
+.bloc_presentation p {
+    text-align: center;
+    padding: 12px;
+}
+.photo {
+    box-shadow: rgba(121, 121, 121, .35) 1px 20px 30px;
+}
+@media screen and (max-width: 768px) {
+    .photo {
+       height: 10em;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .competences {
+        padding-right: 1em;
+        padding-left: 1em;
+    }
+}
+
+.competences {
+    padding-bottom: 2.3rem;
+}
+.competence span {
+    margin-top: 1.2rem;
+   margin-bottom: 1.2rem;
+}
+/*========================== 09.PORTFOLIO ========================== */
+
+.portfolio {
+    margin-bottom: 40px;
+}
+
+.portfolio h3 {
+    padding-top: 40px;
+    padding-bottom: 1em;
+    font-size: 1.8rem;
+}
+
+@media screen and (max-width: 768px) {
+    .portfolio h3 {
+        padding-top: 80px;
+    }
+}
+
+.items {
+    position: relative;
+    margin: 0 auto;
+    height: 370px;
+    width: 250px;
+    background-color: white;
+    box-shadow: rgba(121, 121, 121, .35) 1px 10px 20px;
+    border-radius: 5px;
+}
+
+.items img {
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+}
+
+.items img:hover {
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+}
+
+.items p {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+    font-size: 0.95em;
+}
+.items .statut {
+    margin-top: -0.6em;
+}
+/*========================== 09.CONTACT ========================== */
+.contact {
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 25vh;
+}
+.contact h3 {
+    padding-top: 40px;
+    padding-bottom: 0.1em;
+    font-size: 1.8rem;
+}
+
+@media screen and (max-width: 768px) {
+    .contact h3 {
+        padding-top: 80px;
+    }
+}
+.contact p{
+   padding-bottom: 1.9em;
+}
+
+/*========================== 10.FOOTER ========================== */
+
+.footer {
+    position: relative;
+    background-color: #2b2e31;
+    padding: 1rem 0rem 1rem;
+    bottom: 0;
+}
+
+@media screen and (max-width: 768px) {
+    .footer p,
+    strong {
+        font-size: 0.9em;
+    }
+    .footer i {
+        font-size: 1.9rem !important;
+    }
+}
+
+.footer p,
+strong {
+    color: white;
+}
+
+.footer i {
+    margin-right: 0.6em;
+    font-size: 3rem;
+    color: white;
+}
+
+.footer .social-links {
+    margin-top: 20px;
+    margin-bottom: 25px;
+}
